converted code from java to kotlin

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 25
@@ -29,4 +31,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile project(':ganalytics-core')
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
