--- a/ganalytics-core/build.gradle
+++ b/ganalytics-core/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    testCompile 'junit:junit:4.12'
 }
 
 sourceCompatibility = "1.7"
